--- a/requirements.txt
+++ b/requirements.txt
@@ -1,97 +1,7 @@
-aiofiles==23.2.1
-albucore==0.0.20
-albumentations==1.4.21
-annotated-types==0.7.0
-anyio==4.6.2.post1
-azure-ai-translation-text==1.0.1
-azure-core==1.32.0
-certifi==2024.8.30
-cffi==1.17.1
-charset-normalizer==3.4.0
-click==8.1.7
-coloredlogs==15.0.1
-contourpy==1.3.1
-cryptography==44.0.0
-cycler==0.12.1
-deepl==1.18.0
-distro==1.9.0
-doclayout_yolo==0.0.2
-eval_type_backport==0.2.0
-fastapi==0.115.5
-ffmpy==0.4.0
-filelock==3.16.1
-flatbuffers==24.3.25
-fonttools==4.55.0
-fsspec==2024.10.0
-gradio==5.7.0
-gradio_client==1.5.0
-h11==0.14.0
-httpcore==1.0.7
-httpx==0.27.2
-huggingface-hub==0.26.2
-humanfriendly==10.0
-idna==3.10
-isodate==0.7.2
-Jinja2==3.1.4
-jiter==0.8.0
-kiwisolver==1.4.7
-markdown-it-py==3.0.0
-MarkupSafe==2.1.5
-matplotlib==3.9.2
-mdurl==0.1.2
-mpmath==1.3.0
-networkx==3.4.2
-numpy==2.1.3
-ollama==0.4.1
-onnx==1.17.0
-onnxruntime==1.20.1
-openai==1.55.2
-opencv-python==4.10.0.84
-opencv-python-headless==4.10.0.84
-orjson==3.10.12
-packaging==24.2
-pandas==2.2.3
-pdfminer.six==20240706
-pillow==11.0.0
-protobuf==5.29.0
-psutil==6.1.0
-py-cpuinfo==9.0.0
-pycparser==2.22
-pydantic==2.10.2
-pydantic_core==2.27.1
-pydub==0.25.1
-Pygments==2.18.0
-PyMuPDF==1.24.14
-pyparsing==3.2.0
-python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
-python-multipart==0.0.12
-pytz==2024.2
-PyYAML==6.0.2
 redis==5.2.0
-requests==2.32.3
-rich==13.9.4
-ruff==0.8.0
-safehttpx==0.1.1
-scipy==1.14.1
-seaborn==0.13.2
-semantic-version==2.10.0
-shellingham==1.5.4
-simsimd==6.2.1
-six==1.16.0
-sniffio==1.3.1
-starlette==0.41.3
-stringzilla==3.10.10
-sympy==1.13.1
-tenacity==9.0.0
-thop==0.1.1.post2209072238
-tomlkit==0.12.0
-torch==2.5.1
-torchvision==0.20.1
-tqdm==4.67.1
-typer==0.13.1
-typing_extensions==4.12.2
-tzdata==2024.2
-urllib3==2.2.3
-uvicorn==0.32.1
-websockets==12.0
+huggingface-hub
+doclayout-yolo
+torch
+onnx
+onnxruntime
