--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,13 @@
 # API Configuration
-API_HOST=127.0.0.1
-API_PORT=8080
-BASE_URL=http://127.0.0.1:8080  # Optional: Override full base URL if behind proxy
+API_HOST=0.0.0.0
+API_PORT=8081
+BASE_URL=http://103.73.163.68:8081  # Optional: Override full base URL if behind proxy
 
 # Redis Configuration
 REDIS_CONFIG_HOST=127.0.0.1
 REDIS_CONFIG_PORT=6379
 REDIS_CONFIG_DB=0
-REDIS_CONFIG_PASSWORD=
+REDIS_CONFIG_PASSWORD=lianggehuangli
 
 # DeepL配置（如果需要）
 # DEEPL_AUTH_KEY=your_deepl_key
@@ -19,5 +19,5 @@ REDIS_CONFIG_PASSWORD=
 # AZURE_ENDPOINT=your_azure_endpoint
 # AZURE_REGION=your_azure_region
 
-OPENAI_API_KEY=sk-bM4CrVcuEhGV6NCi00BbEbD9E5614435A84e9778E742029e
-OPENAI_BASE_URL=https://yunwu.zeabur.app/v1
+OPENAI_API_KEY=sk-LRDDbSj4PyI7VeW83401Bd89170041F59aCa417fD7424a46
+OPENAI_BASE_URL=https://api.bltcy.ai/v1
